# Sentinel

design-assets/: class-diagram.md  sequence-diagram.md
sentinel-core/: pyproject.toml
sentinel-core/sentinel_core/models/: logging.py
sentinel-core/sentinel_core/planner/: __init__.py  ollama_client.py  planner_agent.py  provider.py
sentinel-core/tests/: test_planner_adapter.py
sentinel-web/src/components/landing/: AnimatedDemo.tsx  DownloadSection.tsx
